# openCV_Tesseract_test

./: CMakeLists.txt  DetectLabel.cpp  DetectLabel.h  LICENSE  LabelOCR.cpp  LabelOCR.h  README.md  main.cpp  trainSVM.cpp
